--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "moduleResolution": "Node",
     "module": "ESNext",
     "target": "es6",
-    "allowJs": true
+    "allowJs": false,
+    "strict":  true,
   }
 }
